--- a/val/index.html
+++ b/val/index.html
@@ -15,7 +15,13 @@
             </div>
             <div id="boxes">
                 <div id="row1" class="row">
-                    <div id="r1t1" class="tile"></div>
+                    <div id="r1t1" class="tile">
+                        <div class="card">
+                            <div class="inner">
+                                
+                            </div>
+                        </div>
+                    </div>
                     <div id="r1t2" class="tile"></div>
                     <div id="r1t3" class="tile"></div>
                     <div id="r1t4" class="tile"></div>
@@ -87,8 +93,7 @@
                 </div>
             </div>
             <div id="btns">
-                <button>Play Again</button>
-                <Button>Give Up?</Button>
+                <button id="play">Play Again</button>
             </div>
         </div>
     </div>
