--- a/val/index.html
+++ b/val/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+    <div class="bg-layer"></div>
     <div id="main-container">
         <div id="content-container">
             <div id="ttl">
@@ -15,45 +16,164 @@
             </div>
             <div id="boxes">
                 <div id="row1" class="row">
-                    <div id="r1t1" class="tile">
-                        <div class="card">
-                            <div class="inner">
-                                
-                            </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r1t1t"><span id="r1t1" ></span></div>
+                            <div class="back"><span>W</span></div>
                         </div>
                     </div>
-                    <div id="r1t2" class="tile"></div>
-                    <div id="r1t3" class="tile"></div>
-                    <div id="r1t4" class="tile"></div>
-                    <div id="r1t5" class="tile"></div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r1t2t"><span id="r1t2" ></span></div>
+                            <div class="back"><span>I</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r1t3t"><span id="r1t3" ></span></div>
+                            <div class="back"><span>L</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r1t4t"><span id="r1t4" ></span></div>
+                            <div class="back"><span>L</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r1t5t"><span id="r1t5" ></span></div>
+                            <div class="back"><span></span></div>
+                        </div>
+                    </div>
                 </div>
                 <div id="row2" class="row">
-                    <div id="r2t1" class="tile"></div>
-                    <div id="r2t2" class="tile"></div>
-                    <div id="r2t3" class="tile"></div>
-                    <div id="r2t4" class="tile"></div>
-                    <div id="r2t5" class="tile"></div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r2t1t"><span id="r2t1" ></span></div>
+                            <div class="back"><span>Y</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r2t2t"><span id="r2t2" ></span></div>
+                            <div class="back"><span>O</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r2t3t"><span id="r2t3" ></span></div>
+                            <div class="back"><span>U</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r2t4t"><span id="r2t4" ></span></div>
+                            <div class="back"><span></span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r2t5t"><span id="r2t5" ></span></div>
+                            <div class="back"><span></span></div>
+                        </div>
+                    </div>
                 </div>
                 <div id="row3" class="row">
-                    <div id="r3t1" class="tile"></div>
-                    <div id="r3t2" class="tile"></div>
-                    <div id="r3t3" class="tile"></div>
-                    <div id="r3t4" class="tile"></div>
-                    <div id="r3t5" class="tile"></div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r3t1t"><span id="r3t1" ></span></div>
+                            <div class="back"><span>B</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r3t2t"><span id="r3t2" ></span></div>
+                            <div class="back"><span>E</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r3t3t"><span id="r3t3" ></span></div>
+                            <div class="back"><span></span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r3t4t"><span id="r3t4" ></span></div>
+                            <div class="back"><span>M</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r3t5t"><span id="r3t5" ></span></div>
+                            <div class="back"><span>Y</span></div>
+                        </div>
+                    </div>
                 </div>
                 <div id="row4" class="row">
-                    <div id="r4t1" class="tile"></div>
-                    <div id="r4t2" class="tile"></div>
-                    <div id="r4t3" class="tile"></div>
-                    <div id="r4t4" class="tile"></div>
-                    <div id="r4t5" class="tile"></div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r4t1t"><span id="r4t1" ></span></div>
+                            <div class="back"><span>V</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r4t2t"><span id="r4t2" ></span></div>
+                            <div class="back"><span>A</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r4t3t"><span id="r4t3" ></span></div>
+                            <div class="back"><span>L</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r4t4t"><span id="r4t4" ></span></div>
+                            <div class="back"><span>E</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r4t5t"><span id="r4t5" ></span></div>
+                            <div class="back"><span>N</span></div>
+                        </div>
+                    </div>
                 </div>
                 <div id="row5" class="row">
-                    <div id="r5t1" class="tile"></div>
-                    <div id="r5t2" class="tile"></div>
-                    <div id="r5t3" class="tile"></div>
-                    <div id="r5t4" class="tile"></div>
-                    <div id="r5t5" class="tile"></div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r5t1t"><span id="r5t1" ></span></div>
+                            <div class="back"><span>T</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r5t2t"><span id="r5t2" ></span></div>
+                            <div class="back"><span>I</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r5t3t"><span id="r5t3" ></span></div>
+                            <div class="back"><span>N</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r5t4t"><span id="r5t4" ></span></div>
+                            <div class="back"><span>E</span></div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="tile">
+                            <div class="front" id="r5t5t"><span id="r5t5" ></span></div>
+                            <div class="back"><span>S</span></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div id="keyboard">
@@ -92,11 +212,58 @@
                     <button id="DEL" class="btn"><span id="icon2" class="material-symbols-outlined">delete</span></button>
                 </div>
             </div>
-            <div id="btns">
+            <div class="btns" id="btn1">
                 <button id="play">Play Again</button>
+            </div>
+            <div class="btns" id="btn2">
+                <button id="yes">YES</button>
+                <button id="no">NO</button>
+            </div>
+            <div id="mcard">
+                <div class="message">
+                    <div class="inner">
+                        <div class="front-message">#1</div>
+                        <div class="back-message">
+                            <div id="main-message">hi baby loveu hehe happy hearts day imissusomuch</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="inner">
+                        <div class="front-message">#2</div>
+                        <div class="back-message">
+                            <div id="main-message">weve known each other for half a year now and i wish this would never end</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="inner">
+                        <div class="front-message">#3</div>
+                        <div class="back-message">
+                            <div id="main-message">we may not talk that frequent but youre still my baby</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="message">
+                    <div class="inner">
+                        <div class="front-message">#4</div>
+                        <div class="back-message">
+                            <div id="main-message">even though we are separated by distance, we are bounded by lust hehe ilysm baby</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="btns" id="btn3">
+                    <button id="open">OPEN</button>
+                </div>
+                <div id="popup-box">
+                    <div id="popup-content">
+                        <img src="cat.png" alt="cat">
+                        HAPPY VALENTINES BABY!!!
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
